add 3 more h1 in home.html

--- a/home.html
+++ b/home.html
@@ -1,5 +1,7 @@
 <html>
     <body>
         <h1>Its home page</h1>
+        <h1>Its home page</h1>
+        <h1>Its home page</h1>
     </body>
 </html>
